[package]
name = "bing-reward"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Wyss"]
description = "Creates a hidden browser using your browser cookies and makes random requests to bing.com to add point to your account"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.3", features = ["derive"] }
dirs = "4.0.0"
notify-rust = "4.7.0"
rand = "0.8.5"
sqlite = "0.30.3"
thirtyfour = "0.31.0"
tokio = "1.24.2"
